fix: body overflow-y

--- a/web/css/uoj-bs5.css
+++ b/web/css/uoj-bs5.css
@@ -1,3 +1,7 @@
+body {
+	overflow-y: scroll;
+}
+
 .uoj-username {
 	font-weight: 800;
 	text-decoration: none;
